SDKs/neutrinoapi.net/3.5.0/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
s.config_security(
    security=shared.Security(
        api_key=shared.SchemeAPIKey(
            api_key="YOUR_API_KEY_HERE",
        ),
        user_id=shared.SchemeUserID(
            api_key="YOUR_API_KEY_HERE",
        ),
    )
)
    
req = operations.BadWordFilterRequest(
    request=operations.BadWordFilterRequestBody(
        catalog="neque",
        censor_character="molestias",
        content="libero",
        output_case="camel",
    ),
)
    
res = s.data_tools.bad_word_filter(req)

if res.bad_word_filter_response is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Data Tools

* `bad_word_filter` - Bad Word Filter
* `email_validate` - Email Validate
* `phone_validate` - Phone Validate
* `user_agent_info` - User Agent Info

### E-commerce

* `bin_list_download` - BIN List Download
* `bin_lookup` - BIN Lookup
* `convert` - Convert

### Geolocation

* `geocode_address` - Geocode Address
* `geocode_reverse` - Geocode Reverse
* `ip_info` - IP Info

### Imaging

* `html5_render` - HTML5 Render
* `image_resize` - Image Resize
* `image_watermark` - Image Watermark
* `qr_code` - QR Code

### Security and Networking

* `email_verify` - Email Verify
* `host_reputation` - Host Reputation
* `ip_blocklist` - IP Blocklist
* `ip_blocklist_download` - IP Blocklist Download
* `ip_probe` - IP Probe

### Telephony

* `hlr_lookup` - HLR Lookup
* `phone_playback` - Phone Playback
* `phone_verify` - Phone Verify
* `sms_message` - SMS Message
* `sms_verify` - SMS Verify
* `verify_security_code` - Verify Security Code

### WWW

* `browser_bot` - Browser Bot
* `html_clean` - HTML Clean
* `url_info` - URL Info

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
